--- a/currencyconverter.html
+++ b/currencyconverter.html
@@ -191,7 +191,7 @@ li {
 <header style="margin-bottom: 2em;font-family: 'Poppins', sans-serif;width:100vw;">
   <nav class="navbar">
     <!-- LOGO -->
-    <div class="logo"><a href=".//index.html"><img style="
+    <div class="logo"><a href="./index.html"><img style="
       position: relative;
       display: inline;
       height: 4rem;
