--- a/delhi.html
+++ b/delhi.html
@@ -947,7 +947,7 @@ li {
 
   <div class="footer-left">
 
-      <h3><a href="./main.html"><img style="
+      <h3><a href="./index.html"><img style="
 position: relative;
 display: inline;
 height: 4rem;
@@ -955,7 +955,7 @@ height: 4rem;
 " src="./Screenshot (93).png"></a></h3>
 
       <p class="footer-links">
-          <a href="./main.html" class="link-1">Home</a>
+          <a href="./index.html" class="link-1">Home</a>
           <a href="./faqs.html">Faq</a>
 <a href="https://www.tripadvisor.in/TravelersChoice-Hotels-cTop-g293860">Hotel</a>
           
