--- a/sikkim.html
+++ b/sikkim.html
@@ -924,7 +924,7 @@ li {
     </section>
 
     <a class="btnc btnc-primary f-r chat"
-        href="https://www.incredibleindia.org/content/incredible-india-v2/en.html">Personalize</a>
+        href="./itinerary.html">Personalize</a>
     <!-- <a class="btnh btnh-primary f-rh hchat" href="https://www.makemytrip.com/hotels/five_star-hotels-delhi.html">Book Hotels</a>   -->
 </body>
 <style>
